Changed parsing of response in get_data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,5 @@ export(get_tables)
 importFrom(httr,POST)
 importFrom(httr,content)
 importFrom(jsonlite,fromJSON)
+importFrom(readr,locale)
+importFrom(readr,read_csv2)
