--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ LazyData: true
 RoxygenNote: 7.0.2
 Imports:
     httr,
-    jsonlite
+    jsonlite,
+    readr
 Suggests: 
     testthat (>= 2.1.0)
