Minor CRAN fixes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: danstat
 Type: Package
-Title: R client for the Statistics Denmark Databank API
+Title: R Client for the Statistics Denmark Databank API
 Version: 0.1.0
 Author: Valeri Voev
 Maintainer: Valeri Voev <v_voev@yahoo.com>
 Description: The purpose of the package is to enable an R function interface into the Statistics Denmark Databank API mainly for research purposes. 
-    The Statistics Denmark Databank API has four endpoints, see here for more information and testing the API in their console: https://www.dst.dk/en/Statistik/statistikbanken/api.
+    The Statistics Denmark Databank API has four endpoints, see here for more information and testing the API in their console: <https://www.dst.dk/en/Statistik/statistikbanken/api>.
     This package mimics the structure of the API and provides four main functions to match the functionality of the API endpoints.
 License: MIT + file LICENSE
 Encoding: UTF-8
